feat: Add comprehensive testing suite and CI/CD workflows
- Increase test coverage from 40% to 94%
- Add tests for all package handlers (PyPI, Cargo, NuGet, Maven, etc.)
- Add CLI and utility module tests with 100% coverage
- Add E2E tests for all supported ecosystems
- Add GitHub Actions workflows for automated testing
- Add security scanning workflow
- Add automated release workflow
- Configure pytest markers for E2E tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,10 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --cov=purl2src --cov-report=term-missing"
+markers = [
+    "e2e: End-to-end tests that hit real package registries (deselect with '-m \"not e2e\"')",
+    "slow: Tests that take a long time to run",
+]
 
 [tool.coverage.run]
 source = ["src/purl2src"]
