Rename project from semantic-copycat-purl2src to purl2src
- Updated package name in pyproject.toml
- Updated GitHub repository URLs to SemClone/purl2src
- Updated installation command in README
- Updated User-Agent headers and test assertions
- Updated PyPI workflow URL
- Bumped version to 1.2.3
- Added changelog entry for v1.2.3

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     environment:
       name: pypi
-      url: https://pypi.org/project/semantic-copycat-purl2src/
+      url: https://pypi.org/project/purl2src/
     permissions:
       id-token: write
     steps:
